@@ -20,6 +20,7 @@ strongswan (4.6.4-0.1) UNRELEASED; urgency=low
   * debian/rules:
     - enable hardening flags with PIE and bindnow.
     - use multiarch paths.
+    - inconditionnally enable network-manager. 
 
  -- Yves-Alexis Perez <corsac@debian.org>  Thu, 28 Jun 2012 21:17:38 +0200
 
